--- a/EPA.html
+++ b/EPA.html
@@ -99,14 +99,15 @@ Andrew Hamilton Elementary School in West Philadelphia lacks green space, health
                           <br>
                           <br>
                           <h4>Community Engagement and Education</h4>
+                          <p>
+                          Community engagement was central to this proposal. From the start, the school’s principal and faculty contributed to site selection and design, enabling collaboration with the local school district, which agreed to incorporate our stormwater design in its parking lot repaving project.
+
+AHS students helped choose plants for the green infrastructure via class polls, with favorites including apples, tomatoes, and herbs. Lessons expanded to topics like food deserts and environmental justice.
+
+The Netter Center and Philadelphia Orchard Project supported student engagement, GSI planning, and community connections. The Netter Center will hire staff for garden upkeep and develop educational content, while the Philadelphia Orchard Project will assist with the food forest. Students for Environmental Equity (SEE) engaged classrooms on environmental justice, native plants, and activism, empowering students to impact their community.
+                          <br>                                                   
                           <br>
-                          The mighty Don River, running on the western edge of the Exchange District presents its immediately surrounding areas with great opportunity. Leveraging the site’s ecological resources, the district exchanges the flood liability with community assets. Residents and visitors alike will enjoy bountiful public green space, which include the extension of East Harbour’s River’s Edge Park and the new Flooded Shore Amphitheater.
-                          <br>
-                          <br>
-                          These amenities highlight the ideal of exchange. When the Don floods, the retaining wall protects the development and surrounding neighborhoods while directing water into the Amphitheater, which allows for water performances. The retaining wall and its redesign of the Don Valley Expressway, also create new Chinook Salmon habitat, whose return improves not only the river’s biodiversity, but also strengthens Ontario Lake’s fishing economy. Lastly, the green roofs and storm water collection system efficiently recycles storm water for consumer use.
-                          <br>
-                          <br>
-                          <h4>Empower Community</h4>
+                          <h4>Design Solutions</h4>
                           <br>
                           One of many in this city of neighborhoods, the Exchange District seeks to establish an intimate yet welcoming community. Though thousands of visitors and workers will enter the region daily through one of the many public transit systems, the district will remain familiar to those who live there. Public space, such as the River’s Edge Trail and the Exchange Plaza, act as the district’s front lawn and sidewalk exchanging these strangers for neighbors.
                           <br>
