--- a/EPA.html
+++ b/EPA.html
@@ -50,6 +50,7 @@
             <div class="pic index2-picture" style="background: url(assets/images/EPA_bg.jpg);">
                 <div class="overlay"></div>
                 <div class="content">
+                    <h3>2020 Campus RainWorks Challenge</b>
                     <h3><b>Growing Together</b>
                     </h3>
                     <h4>A Community Food Forest for Stormwater Management at Andrew Hamilton School </b>
@@ -108,15 +109,17 @@ The Netter Center and Philadelphia Orchard Project supported student engagement,
                           <br>                                                   
                           <br>
                           <h4>Design Solutions</h4>
+                          <p>
+To manage runoff, our design includes pervious pavers and subsurface storage around playground drains, ensuring functionality without disrupting student line-up areas. The school district’s upcoming parking lot resurfacing will be regraded to channel runoff into a rain garden.
+
+The project includes 1,650 sq ft of rain gardens and an 11,140 sq ft green roof. The area between tree pits will be regraded to enhance stormwater absorption and support native plant growth. A food forest with fruit trees, vegetables, and herbs will encircle the school, with 36 raised beds for crops on the east side.
+
+Community engagement features include inviting green spaces with benches, picnic tables, educational signage, and a mosaic mural. Additionally, UN Sustainable Development Goals will be painted in the lineup area, blending art and sustainability learning.
                           <br>
-                          One of many in this city of neighborhoods, the Exchange District seeks to establish an intimate yet welcoming community. Though thousands of visitors and workers will enter the region daily through one of the many public transit systems, the district will remain familiar to those who live there. Public space, such as the River’s Edge Trail and the Exchange Plaza, act as the district’s front lawn and sidewalk exchanging these strangers for neighbors.
                           <br>
-                          <br>
-                          Along the River’s Edge, new basketball and paddle tennis courts, along with jungle gyms, encourage those residents with mutual interests or with children to meet and enjoy each other. This trail, connecting East Harbor and West Don Lands via a pedestrian bridge, also opens the district to its immediate neighbors, allowing new serendipitous encounters and experiences. Exchange Plaza, provides a heart for the community. Intimately tucked among the many residences, it remains the singular space for this community to come together, celebrate, and thrive.
-                        </p>
                         <div class="details">
                             <h6> Teammates </h6>
-                            <span>Grace Soejanto, Xuanhao Han, Yifei Chen, Will Smith</span>
+                            <span>Corey Wills, Mrinalini Verma, Haoge Xu, etc..</span>
                             <h6> Categories </h6>
                             <span>Urban Design Competition</span>
                             <h6> Date </h6>
