--- a/EPA.html
+++ b/EPA.html
@@ -12,7 +12,7 @@
       </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Xiao WU</title>
+        <title>Leila Bahrami</title>
         <link href='https://fonts.googleapis.com/css?family=Quicksand:400,700|Quattrocento+Sans:400,700|Palanquin:400,600|Raleway|Josefin+Sans' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="assets/css/font-awesome.css">
         <link rel="stylesheet" href="assets/css/owl.carousel.css">
@@ -117,13 +117,22 @@ The project includes 1,650 sq ft of rain gardens and an 11,140 sq ft green roof.
 Community engagement features include inviting green spaces with benches, picnic tables, educational signage, and a mosaic mural. Additionally, UN Sustainable Development Goals will be painted in the lineup area, blending art and sustainability learning.
                           <br>
                           <br>
+                          <h4>Implementation Funding</h4>
+                          </p>
+                        We have identified several government funding sources to support this project's planning and implementation. The Pennsylvania Department of Environmental Protection offers over 30 grants and rebates, including the Environmental Education Grants, Growing Greener, and Nonpoint Source Management programs, which directly benefit schools. The Philadelphia Water Department’s 25-year plan for waterway revitalization also provides funding through programs like the Stormwater Management Incentive Program (SMIP) for non-residential properties.
+
+Additionally, 15 regional foundations, such as the William Penn Foundation and Exelon Foundation, support projects related to water resources and sustainable development in West Philadelphia. Combined, government funding could contribute up to $500,000, with foundations averaging $200,000.
+
+The Philadelphia Orchard Project will fund plant materials and signage, while the Netter Center will supply materials for the raised beds, significantly reducing initial costs.
+                          <br>
+                          <br>
                         <div class="details">
                             <h6> Teammates </h6>
                             <span>Corey Wills, Mrinalini Verma, Haoge Xu, etc..</span>
                             <h6> Categories </h6>
-                            <span>Urban Design Competition</span>
+                            <span>Campus RainWorks Challenge Competition</span>
                             <h6> Date </h6>
-                            <span>01/15/2018 - 01/29/2018</span>
+                            <span>04/15/2020 - 12/11/2020</span>
                         </div>
                     </div>
                 </div>
@@ -131,11 +140,11 @@ Community engagement features include inviting green spaces with benches, picnic
         </div>
         <footer>
             <div class="main-footer">
-                <p> Copyright © 2019 By Xiao WU</p>
+                <p> Copyright © 2024 By Leila Bahrami</p>
                 <p>Made with Bootstrap Jquery.</p>
                 <div class="icons">
                     <ul>
-                      <li><a target="_BLANK" href="https://www.linkedin.com/in/xiaowu2018"><i class="fa fa-linkedin"></i> </a></li>
+                      <li><a target="_BLANK" href="https://www.linkedin.com/in/leila-bahrami-363127137/"><i class="fa fa-linkedin"></i> </a></li>
           						<li><a target="_BLANK" href="https://github.com/EchoWOO"><i class="fa fa-github"></i> </a></li>
           						<li><a target="_BLANK" href="https://www.facebook.com/people/Echo-Woo/100008072611716"><i class="fa fa-facebook"></i> </a></li>
           						<li><a target="_BLANK" href="https://twitter.com/EchoWoo1993"><i class="fa fa-twitter"></i></a></li>
