--- a/EPA.html
+++ b/EPA.html
@@ -59,11 +59,13 @@
             </div>
         </div>
         <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/PuJvzYdxnAg" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-            clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            <div class="row items1">
+                    <div class="col-md-7">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/PuJvzYdxnAg" 
+             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+             clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
-</div>
+      </div>
         <div class="index2-content">
             <div class="container">
                 <div class="row items1">
