--- a/EPA.html
+++ b/EPA.html
@@ -72,6 +72,10 @@
             <div class="container">
                 <div class="row items1">
                     <div class="col-md-7">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/PuJvzYdxnAg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                        </iframe>
+                        <br>
+                        <br>
                         <img src="assets/images/ED_MUSAportfolio3.jpg" alt="">
                         <br>
                         <br>
