--- a/EPA.html
+++ b/EPA.html
@@ -60,15 +60,6 @@
         </div>
      </div>   
        <div class="index2-content">
-           <div class="video-container">
-               <div class="row items1">
-                   <div class="col-md-7">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/PuJvzYdxnAg" 
-                         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-                         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                         </iframe>
-      </div>
-        <div class="index2-content">
             <div class="container">
                 <div class="row items1">
                     <div class="col-md-7">
@@ -76,7 +67,7 @@
                         </iframe>
                         <br>
                         <br>
-                        <img src="assets/images/ED_MUSAportfolio3.jpg" alt="">
+                        <img src="assets/images/EPA01.pdf" alt="">
                         <br>
                         <br>
                         <img src="assets/images/ED_MUSAportfolio32.jpg" alt="">
