--- a/EPA.html
+++ b/EPA.html
@@ -67,19 +67,12 @@
                         </iframe>
                         <br>
                         <br>
-                        <img src="assets/images/EPA01.pdf" alt="">
+                        <img src="assets/images/EPA01.jpg" alt="">
                         <br>
                         <br>
-                        <img src="assets/images/ED_MUSAportfolio32.jpg" alt="">
+                        <img src="assets/images/EPA02.jpg" alt="">
                         <br>
-                        <br>
-                        <img src="assets/images/ED_MUSAportfolio33.jpg" alt="">
-                        <br>
-                        <br>
-                        <img src="assets/images/ED_MUSAportfolio36.jpg" alt="">
-                        <br>
-                        <br>
-                        <img src="assets/images/ED_render_summer.jpg" alt="">
+                        <br>                        
                     </div>
                     <div class="col-md-5">
                         <h3>Growing Together</h3>
