--- a/EPA.html
+++ b/EPA.html
@@ -72,7 +72,16 @@
                         <br>
                         <img src="assets/images/EPA02.jpg" alt="">
                         <br>
-                        <br>                        
+                        <br>  
+                        <img src="assets/images/EPA03.jpg" alt="">
+                        <br>
+                        <br> 
+                        <img src="assets/images/EPA04.jpg" alt="">
+                        <br>
+                        <br> 
+                        <img src="assets/images/EPA05.jpg" alt="">
+                        <br>
+                        <br> 
                     </div>
                     <div class="col-md-5">
                         <h3>Growing Together</h3>
