--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@ based on the Census data from 2010 to 2016</a></h5>
 						<img src="assets/images/UrbanGrowth_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="LeadInspection.html">Predicting Urban Growth <br> 2020 Developement Demand <br>in Delaware valley Region</a></h3>
-								<h5><a href="LeadInspection.html">Using logistic regression, random forest and extreme gradient boosting</a></h5>
+								<h3><a href="UrbanGrowth.html">Predicting Urban Growth <br> 2020 Developement Demand <br>in Delaware valley Region</a></h3>
+								<h5><a href="UrbanGrowth.html">Using logistic regression, Spatial cross-validation and extreme gradient boosting</a></h5>
 							</div>
 						</div>
 					</div>
@@ -212,7 +212,7 @@ based on the Census data from 2010 to 2016</a></h5>
 		</div>
 		<footer>
 			<div class="main-footer">
-				<p> Copyright © 2019 By Leila Bahrami</p>
+				<p> Copyright © 2024 By Leila Bahrami</p>
 				<p>Made with Bootstrap Jquery.</p>
 				<div class="icons">
 					<ul>
