--- a/UrbanGrowth.html
+++ b/UrbanGrowth.html
@@ -50,11 +50,11 @@
             <div class="pic index2-picture" style="background: url(assets/images/home_price.jpeg);">
                 <div class="overlay"></div>
                 <div class="content">
-                    <h3><b> Home Price Prediction </b>
+                    <h3><b> Development Demand Prediction </b>
                     </h3>
                     <br>
                     <br>
-                    <h4>Using Ordinary Least Squares (OLS) Regression to Predict Home Sale Prices in Boston
+                    <h4>Using Logistic Regression to Predict 2020 Development Demand in Delaware Valley Region
                     </h4>
                 </div>
             </div>
@@ -63,29 +63,17 @@
             <div class="container">
                 <div class="row items1">
                     <div class="col-md-7">
-                        <img src="assets/images/2017-HomePrice-1.jpg" alt="">
-                        <img src="assets/images/2017-HomePrice-2.jpg" alt="">
-                        <img src="assets/images/2017-HomePrice-3.jpg" alt="">
-                        <img src="assets/images/2017-HomePrice-4.jpg" alt="">
-                        <img src="assets/images/2017-HomePrice-5.jpg" alt="">
+                        <img src="assets/images/Urbangrowth01.jpg" alt="">
+                        <img src="assets/images/Urbangrowth01.jpg" alt="">                        
                     </div>
                     <div class="col-md-5">
-                        <h3>Hedonic Home Price Prediction</h3>
-                        <p>In this project, we would predict the home price in Boston for Zillow based on the open data we could find from various websites, for instance, Analyze Boston and Harvard World Map. The primary purpose of this project is to use ordinary least squares (OLS) regression to predict the test Boston home sale price as close as possible.
+                        <h3>Delaware Valley Regional Development Forecast and Strategic Growth Plan</h3>
+                        <p>In collaboration with the Delaware Valley Regional Planning Commission, this project analyzed and forecasted growth across the Delaware Valley region, covering Pennsylvania, New Jersey, and Delaware. Using spatial data, demographic projections, and regression analysis, the study assessed demand-driven (population growth) and supply-driven (infrastructure expansion) development factors to pinpoint areas with high growth potential, particularly in Chester, Gloucester, and northern Montgomery and Bucks Counties.
                           <br>
                           <br>
-                          Home sale price prediction is important because of its close relation to real estate development, but also people’s daily lives, and the economic growth in the real world. But it’s also hard to predict because the price is not only related to the internal characteristics of the house itself but also its distance to amenities and public services. And more importantly, there might also be underlying spatial structures of prices that need to be discovered.
+                          Key findings revealed concentrated development demands near proposed highway routes, with heightened activity expected along northern Bucks and Burlington Counties, which will serve as vital connectors within the Greater Philadelphia Region. The project further conducted an environmental sensitivity analysis to identify vulnerable natural areas, such as forests and wetlands, that may be impacted by sprawl. Recommendations included strategies to support balanced growth, control urban sprawl, and protect conservation-focused areas. Policy suggestions for growth management and sustainable development included collaborative land-use planning, targeted conservation, and zoning adjustments to mitigate environmental risks and guide equitable urban development across the region
                           <br>
-                          <br>
-                          In this project, the difficulties lie in finding the best predictive variables, adjusting the correct predictive power without over fitting, and to make it generalizable to most of the neighborhoods in Boston. Besides, the underlying spatial structure of the prices is hard to find out because it might change according to time. And the planning divisions or census tracts might not be the best partition for spatial structures.
-                          <br>
-                          <br>
-                          The overall modeling strategy would be firstly finding as many predictors as possible. Then try to build up possible linear regressions, compare the goodness of fit and test their generalization through applying them to neighborhoods with different levels of economic development. We finally found out that the sales price is not only related to the internal characteristics itself, but also the houses’ distance to open spaces, landmark, schools, universities and etc. The spatial cross-validation results also show similar percentage mean absolute error (MAPE), therefore the prediction is generalizable to neighborhoods in Boston.
-                          <br>
-                          <br>
-                          This project will have great practicality in the real world because of its capability of taking various phenomena that has relation to home sale prices into consideration and also provide a more profound insight into the sale price and its related predictors. This way of prediction could also be helpful in other problems in the real world.
-                          <br>
-                          <br>
+                          <br>                                                 
                         </p>
                         <div class="details">
                             <h6> Instructor </h6>
