--- a/UrbanGrowth.html
+++ b/UrbanGrowth.html
@@ -47,7 +47,7 @@
             </div>
         </header>
         <div class="first-content">
-            <div class="pic index2-picture" style="background: url(assets/images/Urbangrowth_bg1.jpeg);">
+            <div class="pic index2-picture" style="background: url(assets/images/Urbangrowth_bg1.jpg);">
                 <div class="overlay"></div>
                 <div class="content">
                     <h3><b> Development Demand Prediction </b>
