--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 						<img src="assets/images/NA.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="NationalAquarium.html">Identifying Patterns In <br>
-									Mid-Atlantic Marine Debris</a></h3>
-								<h5><a href="NationalAquarium.html">Azavea Summer of Maps Project with National Aquarium</a></h5>
+								<h3><a href="EnviroJustice.html">Identifying Patterns In <br>
+									Envirnmental Justice Study</a></h3>
+								<h5><a href="EnviroJustice.html">An Inclusive Approach to Equitable Resource Distribution and Community Impact within LTER Boundary</a></h5>
 							</div>
 						</div>
 					</div>
