--- a/EnviroJustice.html
+++ b/EnviroJustice.html
@@ -12,7 +12,7 @@
       </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Xiao WU</title>
+        <title>Leila Bahrami</title>
         <link href='https://fonts.googleapis.com/css?family=Quicksand:400,700|Quattrocento+Sans:400,700|Palanquin:400,600|Raleway|Josefin+Sans' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="assets/css/font-awesome.css">
         <link rel="stylesheet" href="assets/css/owl.carousel.css">
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="logo">
-                            <h2><a href="index.html">Xiao WU</a></h2>
+                            <h2><a href="index.html">Leila Bahrami</a></h2>
                         </div>
                     </div>
                     <div class="col-md-8">
@@ -62,10 +62,7 @@
             <div class="container">
                 <div class="row items1">
                     <div class="col-md-7">
-                        <img src="assets/images/2018-national-aquarium-04.jpg" alt="">
-                        <img src="assets/images/2018-national-aquarium-03.jpg" alt="">
-                        <img src="assets/images/2018-national-aquarium-01.jpg" alt="">
-                        <img src="assets/images/2018-national-aquarium-02.jpg" alt="">
+                        <img src="assets/images/EnviroJustice.jpg" alt="">                        
                     </div>
                     <div class="col-md-5">
                         <h3>Identifying Patterns
@@ -94,7 +91,7 @@
         </div>
         <footer>
             <div class="main-footer">
-                <p> Copyright © 2019 By Xiao WU</p>
+                <p> Copyright © 2024 By Leila Bahrami</p>
                 <p>Made with Bootstrap Jquery.</p>
                 <div class="icons">
                     <ul>
