--- a/EnviroJustice.html
+++ b/EnviroJustice.html
@@ -50,10 +50,8 @@
             <div class="pic index2-picture" style="background: url(assets/images/homebg.jpg);">
                 <div class="overlay"></div>
                 <div class="content">
-                    <h3><b>Identifying Patterns
-                      <br>
-                      <br>
-                      In Mid-Atlantic Marine Debris</b>
+                    <h3><b>Urban Forests, Climate Resilience, and Environmental Justice within the Baltimore Ecosystem Study (BES)                      
+                      </b>
                     </h3>
                 </div>
             </div>
