--- a/EnviroJustice.html
+++ b/EnviroJustice.html
@@ -66,14 +66,11 @@
                         <h3>Identifying Patterns
                           <br>
                           <br> In Mid-Atlantic Marine Debris</h3>
-                        <p><a href="https://www.aqua.org/">National Aquarium</a> is the state coordinator for Ocean Conservancy’s all International Coastal Cleanup (ICC) events in Maryland. They collect the information that volunteers collect on their debris data cards and publish the annual data in the Ocean Trash Index, an item-by-item, location-by-location accounting of marine debris picked up by volunteers on just one day. The major task of this project is to use this dataset to predict the possible high-risk marine debris locations in the mid-Atlantic region to better inform and target future reduction efforts.
+                        <p> Urban forests play a crucial role in buffering climate change impacts, enhancing air quality, and fostering environmental equity—making them a critical focus in recent years. The Baltimore Ecosystem Study (BES) has positioned Baltimore as a leading U.S. city in urban forestry and ecological understanding, examining the city as a dynamic ecosystem. Through this study, I am assessing Environmental Justice within the Long-Term Ecological Research (LTER) boundary, specifically evaluating which census tracts face the greatest environmental disparities. The goal is to identify areas most impacted by environmental injustices and to inform actions that enhance quality of life equitably for all residents, advancing Baltimore's resilience and inclusivity.
                           <br>
                           <br>
-                          The cleanup records are biased towards urban development and population, therefore finding the best predictive modeling approach is the major difficulty of this project. I performed data cleaning, feature engineering, exploratory analysis and multiple modeling approaches in predicting the high-risk marine debris locations. In the modeling approaches, I tried with multiple machine learning approaches including decision tree, random forest, gradient boosting, extreme gradient boosting and geostatistical regression, including Kriging interpolation.
-                          <br>
-                          <br>
-                          As the final result of this project, I aggregated the geostatistical regression result to the municipalities level and created a map of the high-risk areas with Marine Debris to better inform future cleaning efforts.
-                          <br>
+                          According to the findings of this study, the census tracts most vulnerable to environmental injustice are concentrated in Baltimore’s downtown area, where socioeconomic vulnerability is also significantly high. These areas score the highest in environmental injustice due to a combination of factors, including limited access to green spaces and exposure to urban heat, air pollution, and other climate stressors. This overlap of environmental and social vulnerability underscores the urgent need for targeted interventions that enhance urban forests and other green infrastructure to support resilience and improve quality of life for Baltimore's most affected communities.
+                          <br>                          
                         </p>
                         <div class="details">
                             <h6> Client </h6>
