--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 						<img src="assets/images/NA.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="EnviroJustice.html">Identifying Patterns In <br>
-									Envirnmental Justice Study</a></h3>
+								<h3><a href="Envirnmental Justice Study"<br>
+									</a></h3>
 								<h5><a href="EnviroJustice.html">An Inclusive Approach to Equitable Resource Distribution and Community Impact within LTER Boundary</a></h5>
 							</div>
 						</div>
