--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<div>
 		
 		<div class="container">
-			<div class="second-section">
+			<div class="container">
 				<div class="filters">
 					<ul id="filters">
 						<li class="active" data-filter="*">All</li>
