--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
 						<center><a class="load-more" href="https://drive.google.com/file/d/1K98vu8KKrwVCq48R5IEd1nQoc6hmGThJ/view?usp=sharing">Portfolio</a></center>
 						<br>
 						<br>
-						<div>
-		
+				</div>
+			</div>
+		</div>
 		<div class="container">
 			<div class="container">
 				<div class="filters">
