--- a/index.html
+++ b/index.html
@@ -53,6 +53,57 @@
 				</div>
 			</div>
 		</div>
+		<div class="blog-firstsection">
+			<div class="container">
+				<div class="row items2 ">
+
+					<div class="col-md-4 grid-item ">
+						<div class="picture">
+							<img src="assets/images/dog_collage.jpg" alt="">
+						</div>
+						<div class="pic-inner">
+							<h3><a href="dogbreed_CNN.html">Convolutional Neural Network Dog Breed Classifier</a>
+							</h3>
+							<span>2020-04-01</span>
+							<p> Can you tell what breed is this dog?
+								<br>
+								Building my first Computer Vision project using Convolutional Neural Network and applying transfer learning to recognize dog breeds step by step.</p>
+								<div class="btn-load-more">
+								<a class="load-more" href="dogbreed_CNN.html">Read More</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-4 grid-item ">
+						<div class="picture">
+							<img src="assets/images/Airbnb.png" alt="">
+						</div>
+						<div class="pic-inner">
+							<h3><a href="blog_airbnb_price.html">How to get a higher listing price on Airbnb?
+								</a></h3>
+							<span>2020-02-01</span>
+							<p> Are you curious about how much your home/apartment/room/living room sofa is worth on Airbnb? Let me show you some findings from an exploratory analysis on the Airbnb listing prices in Seattle and Boston.
+								<div class="btn-load-more">
+								<a class="load-more" href="blog_airbnb_price.html">Read More</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-4 grid-item ">
+						<div class="picture">
+							<img src="assets/images/remote_sensing_0.jpg" alt="">
+						</div>
+						<div class="pic-inner">
+							<h3><a href="blog_remote_sensing.html">Greening Philadelphia: <br>
+								Measuring Impacts of Urban Greening Projects</a></h3>
+							<span>2019-01-01</span>
+							<p> Are urban greening projects making our city greener? This project applies remote sensing approaches to measure the change of green in Philadelphia Navy Yard.
+								<div class="btn-load-more">
+								<a class="load-more" href="blog_remote_sensing.html">Read More</a>
+							</div>
+						</div>
+					</div>
+
 
 		<div class="about-second-content">
 			<div class="container">
