--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 				
 		<div class="container">
-			<div class="container">
+			<div class="second-section">
 				<div class="filters">
 					<ul id="filters">
 						<li class="active" data-filter="*">All</li>
