--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
 		</div>	
 		<div class="blog-firstsection">
 			<div class="container">
+				<div class="row">
+					<div class="col-md-5 col-sm-6 col-xs-12">
+						<h3> About Me </h3>
+						<div class="line"></div>
+						<!-- <a href="https://drive.google.com/file/d/1cYHqgN7IrKmEBvO0LHYP1YN3GDKIkITK/view?usp=sharing"> Resume Download</a> -->
+					</div>			
+			<div class="container">
 				<div class="row items2 ">
 
 					<div class="col-md-4 grid-item ">
