--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 				</div>
 			</div>
 		</div>	
+		</div>
+		</div>	
 		<div class="blog-firstsection">						
 			<div class="container">
 				<div class="row items2 ">
