--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 						</div>
 					</div>
 
-
-				
+		</div>
+		</div>		
 		<div class="container">
 			<div class="second-section">
 				<div class="filters">
