--- a/index.html
+++ b/index.html
@@ -79,7 +79,12 @@
 		</div>	
 		</div>
 		</div>	
-		<div class="blog-firstsection">						
+		<div class="blog-firstsection">	
+			<!-- Section Title -->
+   			<div class="section-title">
+      			 <h2>Research Projects</h2>
+       			 <p class="section-subtitle">Explore some of my key research initiatives and findings</p>
+    			</div>
 			<div class="container">
 				<div class="row items2 ">
 					<div class="col-md-4 grid-item ">
