--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		</div>	
 		<div class="blog-firstsection">	
 			<!-- Section Title -->
-   			<div class="section-title">
+   			<div class="second-section">
       			 <h2>Research Projects</h2>
        			 <p class="section-subtitle">Explore some of my key research initiatives and findings</p>
     			</div>
