--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
 		</div>	
 		<div class="blog-firstsection">	
 			<!-- Section Title -->
-   			<div class="second-section">
-      			 <h2>Research Projects</h2>
+   			<div class="section-title">
+				<div class="title-line">	
+      				 <h2>Research Projects</h2>
        			 <p class="section-subtitle">Explore some of my key research initiatives and findings</p>
     			</div>
 			<div class="container">
