--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<!-- Section Title -->
    			<div class="section-title">
 				<div class="title-line">	
-      					 <h2>									Research Projects</h2>
+      					 <h2>									Research </h2>
        			 		
     			</div>
 			<div class="container">
@@ -138,6 +138,12 @@
 		</div>
 		</div>		
 		<div class="container">
+			<!-- Section Title -->
+   			<div class="section-title">
+				<div class="title-line">	
+      					 <h2>									 Projects</h2>
+       			 		
+    			</div>			
 			<div class="second-section">
 				<div class="filters">
 					<ul id="filters">
