--- a/blog_remote_sensing.html
+++ b/blog_remote_sensing.html
@@ -12,7 +12,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Xiao WU</title>
+    <title>Leila Bahrami</title>
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v4.0&appId=2432399083751070&autoLogAppEvents=1"></script>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,700|Quattrocento+Sans:400,700|Palanquin:400,600|Raleway|Josefin+Sans' rel='stylesheet' type='text/css'>
@@ -33,7 +33,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="logo">
-              <h2><a href="index.html">Xiao WU</a></h2>
+              <h2><a href="index.html">Leila Bahrami</a></h2>
             </div>
           </div>
           <div class="col-md-8">
@@ -286,12 +286,11 @@
         <div class="icons">
           <ul>
             <li><a target="_BLANK" href="https://www.linkedin.com/in/xiaowu2018"><i class="fa fa-linkedin"></i> </a></li>
-						<li><a target="_BLANK" href="https://github.com/EchoWOO"><i class="fa fa-github"></i> </a></li>
+						<li><a target="_BLANK" href="https://github.com/lbahrami"><i class="fa fa-github"></i> </a></li>
 						<li><a target="_BLANK" href="https://www.facebook.com/people/Echo-Woo/100008072611716"><i class="fa fa-facebook"></i> </a></li>
 						<li><a target="_BLANK" href="https://twitter.com/EchoWoo1993"><i class="fa fa-twitter"></i></a></li>
 						<!-- <li><a target="_BLANK" href="https://www.instagram.com/echo_xiao_wu/"><i class="fa fa-instagram"></i> </a></li> -->
-						<!-- <li><a target="_BLANK" href="http://behance.net/"><i class="fa fa-behance"></i></a></li> -->
-						<li><a target="_BLANK" href="https://public.tableau.com/profile/xiao.wu#!/"><i class="fa fa-bar-chart"></i></a></li>
+						
           </ul>
         </div>
       </div>
