--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 					<div class="col-md-5 col-sm-6 col-xs-12">
 						<h3> About Me </h3>
 						<div class="line"></div>
+						<div class="about-image">
+						     <img src="assets/images/Leila.jpg" alt="Your Image" class="img-responsive">
 						<!-- <a href="https://drive.google.com/file/d/1cYHqgN7IrKmEBvO0LHYP1YN3GDKIkITK/view?usp=sharing"> Resume Download</a> -->
 					</div>
 					<div class="col-md-7 col-sm-6 col-xs-12">
