--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 						<!-- <a href="https://drive.google.com/file/d/1cYHqgN7IrKmEBvO0LHYP1YN3GDKIkITK/view?usp=sharing"> Resume Download</a> -->
 					</div>
 					<div class="col-md-7 col-sm-6 col-xs-12">
+						<h3> About Me </h3>
 						<p>I am an experienced data analyst specialized in product analytics, machine learning and visual communication.</p>
 						<br>
 						<p> In the past three years, I have collaborated with multiple teams with diverse background on a span of very different projects in a fast-paced, enthusiastic environment. I worked closely with product management, business development, policy, and data science, as well as municipal staff across North America and Europe at Uber. My projects have a broad span from market size prediction to dashboard implementation, also from assisting data migration to creating internal team websites.</p>
