--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 		</header>
 		<div class="first-content">
-			<div class="pic home-picture" style="background: url(assets/images/homebg.jpg);">
+			<div class="pic home-picture" style="background: url(assets/images/Leila.jpg);">
 				<div class="overlay"></div>
 				<div class="content">
 					<h3>Leila's Website</h3>
