--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
 						<!-- <a href="https://drive.google.com/file/d/1cYHqgN7IrKmEBvO0LHYP1YN3GDKIkITK/view?usp=sharing"> Resume Download</a> -->
 					</div>
 					<div class="col-md-7 col-sm-6 col-xs-12">
-						<h3> About Me </h3>
+						<h3> Research Interest </h3>
+						<div class="line"></div>
+						<p>I am an experienced data analyst specialized in product analytics, machine learning and visual communication.</p>
+						<br>
+						<br>
+						<h3> Research Interest </h3>
 						<div class="line"></div>
 						<p>I am an experienced data analyst specialized in product analytics, machine learning and visual communication.</p>
 						<br>
