--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<p>I am an experienced data analyst specialized in product analytics, machine learning and visual communication.</p>
 						<br>
 						<br>
-						<h3> Research Interest </h3>
+						<h3> Background </h3>
 						<div class="line"></div>
 						<p>I am an experienced data analyst specialized in product analytics, machine learning and visual communication.</p>
 						<br>
@@ -78,6 +78,9 @@
 						<center><a class="load-more" href="https://drive.google.com/file/d/134RnxrzbGZfj5cg86Rgr906fQNxmiV6G/view?usp=sharing">Resume</a></center>
 						<br>
 						<br>
+						<h3> Mission </h3>
+						<div class="line"></div>
+						
 						<center><a class="load-more" href="https://drive.google.com/file/d/1K98vu8KKrwVCq48R5IEd1nQoc6hmGThJ/view?usp=sharing">Portfolio</a></center>
 						<br>
 						<br>
