--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 		</header>
 		<div class="first-content">
-			<div class="pic home-picture" style="background: url(assets/images/Leila.jpg);">
+			<div class="pic home-picture" style="background: url(assets/images/GND_bg.jpg);">
 				<div class="overlay"></div>
 				<div class="content">
 					<h3>Leila's Website</h3>
@@ -57,7 +57,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-5 col-sm-6 col-xs-12">
-						<img src="assets/images/dog_collage.jpg" alt="">
+						<img src="assets/images/Leila.jpg" alt="">
 						<div class="line"></div>						
 						<!-- <a href="https://drive.google.com/file/d/1cYHqgN7IrKmEBvO0LHYP1YN3GDKIkITK/view?usp=sharing"> Resume Download</a> -->
 					</div>
