--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-5 col-sm-6 col-xs-12">
-						<img src="assets/images/Leila.jpg" alt="">
+						<img src="assets/images/Leila1.jpg" alt="">
 						<div class="line"></div>						
 						<!-- <a href="https://drive.google.com/file/d/1cYHqgN7IrKmEBvO0LHYP1YN3GDKIkITK/view?usp=sharing"> Resume Download</a> -->
 					</div>
