--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
 					<div class="col-md-7 col-sm-6 col-xs-12">
 						<h3> Research Interest </h3>
 						<div class="line"></div>
-						<p>I am an experienced data analyst specialized in product analytics, machine learning and visual communication.</p>
+						<p>Climate Change & Resilience;</p>
+						<p>Environmental Health;</p>
+						<p>Climate and Health;</p>
+						<p>Social and Economic Jutice;</p>
 						<br>
 						<br>
 						<h3> Background </h3>
@@ -83,8 +86,6 @@
 						<center><a class="load-more" href="https://drive.google.com/file/d/134RnxrzbGZfj5cg86Rgr906fQNxmiV6G/view?usp=sharing">Resume</a></center>
 						<br>
 						<br>						
-						<center><a class="load-more" href="https://drive.google.com/file/d/1K98vu8KKrwVCq48R5IEd1nQoc6hmGThJ/view?usp=sharing">Portfolio</a></center>
-						<br>
 						<br>
 				</div>
 			</div>
