--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<div class="col-md-7 col-sm-6 col-xs-12">
 						<h3> Research Interest </h3>
 						<div class="line"></div>
-						<p>Climate Change & Resilience;</p>
+						<h4>Climate Change & Resilience;</h4>
 						<p>Environmental Health;</p>
 						<p>Climate and Health;</p>
 						<p>Social and Economic Jutice;</p>
