--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 						<h3> Research Interest </h3>
 						<div class="line"></div>
 						<h4>Climate Change & Resilience;</h4>
-						<p>Environmental Health;</p>
-						<p>Climate and Health;</p>
-						<p>Social and Economic Jutice;</p>
+						<h4>Environmental Health;</h4>
+						<h4>Climate and Health;</h4>
+						<h4>Social and Economic Jutice;</h4>
 						<br>
 						<br>
 						<h3> Background </h3>
