--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<h3> Research Interest </h3>
 						<div class="line"></div>
 						<h4>Climate Change & Resilience;</h4>
-						<h4>Environmental Health;</h4>
+						<h4>Urban Environment Modeling;</h4>
 						<h4>Climate and Health;</h4>
 						<h4>Social and Economic Jutice;</h4>
 						<br>
