--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<h4>Climate Change & Resilience;</h4>
 						<h4>Urban Environment Modeling;</h4>
 						<h4>Climate and Health;</h4>
-						<h4>Social and Economic Jutice;</h4>
+						<h4>Social Jutice;</h4>
 						<br>
 						<br>
 						<h3> Background </h3>
@@ -75,9 +75,7 @@
 						<p>I am an experienced data analyst specialized in product analytics, machine learning and visual communication.</p>
 						<br>
 						<p> In the past three years, I have collaborated with multiple teams with diverse background on a span of very different projects in a fast-paced, enthusiastic environment. I worked closely with product management, business development, policy, and data science, as well as municipal staff across North America and Europe at Uber. My projects have a broad span from market size prediction to dashboard implementation, also from assisting data migration to creating internal team websites.</p>
-						<br>
-						<p> I always have curiosity, passion and collaborative spirit to work in an innovative field and contribute my skills to optimizing business decisions or creating successful products.</p>
-						<br>
+						<br>						
 						<br>
 						<h3> Mission </h3>
 						<div class="line"></div>
