--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
 						<br>
 						<h3> Background </h3>
 						<div class="line"></div>
-						<p>I am an experienced data analyst specialized in product analytics, machine learning and visual communication.</p>
+						<p>As a research professional with experience at the Environmental Modeling Lab at UPenn and in the private sector, I specialize in integrating spatial data, machine learning, and GIS to analyze human, urban, and natural systems under extreme climate events.</p>
 						<br>
-						<p> In the past three years, I have collaborated with multiple teams with diverse background on a span of very different projects in a fast-paced, enthusiastic environment. I worked closely with product management, business development, policy, and data science, as well as municipal staff across North America and Europe at Uber. My projects have a broad span from market size prediction to dashboard implementation, also from assisting data migration to creating internal team websites.</p>
-						<br>						
+						<p> Over the past three years, I have conducted advanced statistical modeling in R to simulate climate vulnerability, leading regional climate action plans, and advanced environmental justice studies.</p>
+						<br>
+						<p> My current work involves using spatial data and machine learning to understand urban resilience and health challenges in the face of global change, including heat extremes and pandemics.<p>
 						<br>
 						<h3> Mission </h3>
 						<div class="line"></div>
