--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 						<br>
 						<h3> Mission </h3>
 						<div class="line"></div>
+						<p> My expertise lies in integrating machine learning (Geo-AI), remote sensing and GIS techniques to explore the complex relationships between human, urban and natural systems under climate change, which aims to provide both scientific and practical frameworks for designing more resilient and sustainable communities.<p>
+						<p> My goal is to promote urban climate equity through urban planning.<p>	
 						<br>
 						<div class="btn-load-more">
 						<center><a class="load-more" href="https://drive.google.com/file/d/134RnxrzbGZfj5cg86Rgr906fQNxmiV6G/view?usp=sharing">Resume</a></center>
