--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<p> My goal is to promote urban climate equity through urban planning.<p>	
 						<br>
 						<div class="btn-load-more">
-						<center><a class="load-more" href="https://drive.google.com/file/d/134RnxrzbGZfj5cg86Rgr906fQNxmiV6G/view?usp=sharing">Resume</a></center>
+						<center><a class="load-more" href="https://drive.google.com/drive/u/0/my-drive">Resume</a></center>
 						<br>
 						<br>						
 						<br>
