--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<br>
 						<br>
 						<img src="assets/images/Leila1.jpg" alt="">												
-						<!-- <a href="https://drive.google.com/drive/u/0/my-drive"> Resume Download</a> -->
+						<!-- <a href="https://drive.google.com/file/d/12F5urNvZ26zQRRtCNu8_uFv2-gfcuu_i/view"> Resume Download</a> -->
 					</div>
 					<div class="col-md-7 col-sm-6 col-xs-12">
 						<h3> Research Interest </h3>
@@ -85,7 +85,7 @@
 						<p> My goal is to promote urban climate equity through urban planning.<p>	
 						<br>
 						<div class="btn-load-more">
-						<center><a class="load-more" href="https://drive.google.com/drive/u/0/my-drive">Resume</a></center>
+						<center><a class="load-more" href="https://drive.google.com/file/d/12F5urNvZ26zQRRtCNu8_uFv2-gfcuu_i/view">Resume</a></center>
 						<br>
 						<br>						
 						<br>
