--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 					<div class="col-md-4 grid-item ">
 						<div class="picture">
-							<img src="assets/images/Airbnb.png" alt="">
+							<img src="assets/images/baltimore1.jpg" alt="">
 						</div>
 						<div class="pic-inner">
 							<h3><a href="blog_airbnb_price.html">How to get a higher listing price on Airbnb?
