--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<img src="assets/images/baltimore1.jpg" alt="">
 						</div>
 						<div class="pic-inner">
-							<h3><a href="blog_airbnb_price.html">How to get a higher listing price on Airbnb?
+							<h3><a href="BaltimoreUHI.html">Impacts of Land Use and Socioeconomic Patterns on Urban Heat Island in Baltimore City
 								</a></h3>
 							<span>2020-02-01</span>
 							<p> Are you curious about how much your home/apartment/room/living room sofa is worth on Airbnb? Let me show you some findings from an exploratory analysis on the Airbnb listing prices in Seattle and Boston.
