--- a/BaltimoreUHI.html
+++ b/BaltimoreUHI.html
@@ -54,11 +54,11 @@
       <div class="pic blog1-picture" style="background: url(assets/images/remote_sensing_00.jpg);">
         <div class="overlay"></div>
         <div class="content">
-          <h3>Greening Philadelphia Navy Yard:<br/>
+          <h3>Impacts of Land Use and Socioeconomic Patterns <br/>
             <br>
-            Measuring Impacts of <br/>
+            on Urban Heat Islandeasuring Impacts of <br/>
             <br>
-            Landscape Projects
+            in Baltimore City
           </h3>
         </div>
       </div>
