--- a/BaltimoreUHI.html
+++ b/BaltimoreUHI.html
@@ -65,7 +65,7 @@
     </div>
     <div class="blogdata">
       <!-- <div class="container">
-        <span>1 October 2018 </span>
+        <span>1 May 2020 </span>
         <p>Manually digitizing maps can be tedious and inaccurate, knowing how to automate the process using ArcMap and R saves a lot of time and can increase the accuracy. This blog provides an approach that uses image processing and remote sensing techniques in R and ArcGIS to digitize image maps – the kind often found in a PDF that provides no way to get at the underlying data. The final output will be georeferenced raster or vector spatial datasets.
         </p>
         <h4> Project background </h4>
@@ -89,11 +89,11 @@
             <div class="col-md-4">
               <div class="line"></div>
               <h6>
-                <em>Dec 2018</br>
+                <em>May 2020</br>
                   <br>
-                  Instructor: Allison Lassiter</br>
+                  Instructor: Dana Tomlin</br>
                   <br>
-                  Tag: Remote Sensing
+                  Tag: Remote Sensing, Spatila Analysis, Logistic Regression
                 </em>
               </h6>
             </div>
