--- a/BaltimoreUHI.html
+++ b/BaltimoreUHI.html
@@ -56,7 +56,7 @@
         <div class="content">
           <h3>Impacts of Land Use and Socioeconomic Patterns <br/>
             <br>
-            on Urban Heat Islandeasuring Impacts of <br/>
+            on Urban Heat Island <br/>
             <br>
             in Baltimore City
           </h3>
@@ -99,9 +99,9 @@
             </div>
             <div class="col-md-8">
                 <p>
-                  How does the landscape projects change in an urban environment? In this project, I used a simple and also most popular indicator in remote sensing,  normalized difference vegetation index, also known as NDVI to examine the change and impact of greenness in the landscape projects in the Navy Yard. <br/>
+                  Baltimore, a historic and urbanizing city, faces significant urban heat island (UHI) effects driven by impervious surfaces and socioeconomic disparities. This study explores spatial patterns of land surface temperature (LST) and UHI intensity from 2013–2019, examining the contributions of land-use factors (e.g., impervious surfaces, vegetation) and socioeconomic variables (e.g., population density, income).  <br/>
                   <br>
-                  I selected my site in the Navy Yard because of its dynamic and urban development in the past 20 years. It used to be a highly industrialized site as the birthplace of the US navy. About 20 years ago, the Navy Yard started the transition from a historical industrial site into a business campus committed to smart energy innovation and sustainability. By analyzing the NDVI change in the Navy Yard, we could possibly see the gradual transition of landscape at a landscape project scale.
+                  Key questions include: What spatial patterns of LST and UHI intensity exist? How do land-use and socioeconomic variables influence UHI? Objectives focus on analyzing these drivers and proposing equitable strategies for UHI mitigation to reduce heat exposure disparities and guide sustainable urban planning.
                   <br>
                   <br>
                   <center><img src="assets/images/remote_sensing_01.jpg" style="max-width:80%;" alt="Navy Yard landscape projects timeline"></center>
